--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = "https://AleCava01.github.io/ZataiLog/"
 languageCode = 'en-us'
 title = "Tobia's log"
 
